--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>NAME - Service</title>
+    <title>User - Service</title>
 </head>
 <body>
-<h2>NAME - Service</h2>
+<h2>User - Service</h2>
 <p>Copyright (c) Woolgens, All Rights Reserved</p>
 
 </body>
